# mac-fan-ctrl

./: .gitignore  AGENTS.md  LICENSE  README.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest-setup.ts
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml  release.yml
docs/: code-signing.md  design-brief.md  design.md  fan-control-verification.md  github-workflow.md  prd.md  project-structure.md  release-guide.md  rfc.md  task.md
docs/diagrams/: architecture.md
docs/learning/: README.md  dev-setup.md  fan-control.md  ioreport-sensors.md  macos-smc.md  macos-tray.md  privileged-architecture.md  read-sensor.md  rust-basics.md  system-programming.md  tauri-architecture.md
docs/plans/: 2026-03-10-min-window-size.md  2026-03-10-privileged-helper.md  2026-06-20-current-repo-state.md
e2e/: fan-control.spec.ts  hello-world.spec.ts
homebrew-cask/: README.md
homebrew-cask/Casks/: fanguard.rb
scripts/: build-local-notarized.sh  build-testflight.sh  fan-control-hardware-smoke.sh  generate-icon.py
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  fanguard-helper-aarch64-apple-darwin  tauri.conf.json  tauri.direct.conf.json  tauri.testflight.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: alerts.rs  apple_silicon_sensors.rs  commands.rs  fan_control.rs  fan_snapshot.rs  fs_util.rs  helper_binary.rs  lib.rs  log.rs  main.rs  power_monitor.rs  power_presets.rs  presets.rs  smc.rs  smc_client.rs  smc_protocol.rs  smc_writer.rs  tray.rs
src/__tests__/: App.test.ts  format.test.ts  temperature.test.ts
src/components/: AboutDialog.svelte  Dashboard.svelte  DesktopDashboard.svelte  FanControlModal.svelte  FanControlModal.test.ts  FanControlPane.svelte  FanControlPane.test.ts  PowerPresetSettings.svelte  PreferencesDialog.svelte  PresetDropdown.svelte  SensorCard.svelte  SensorListPane.svelte  Sparkline.svelte  StatusDot.svelte  UpdateDialog.svelte
src/e2e/: mockWindow.ts  tauriMockCore.ts
src/lib/: dashboardLayout.test.ts  dashboardLayout.ts  designTokens.ts  distribution.test.ts  distribution.ts  format.ts  sensorListPaneState.test.ts  sensorListPaneState.ts  tauriCommands.test.ts  tauriCommands.ts  temperature.ts  types.ts  updater.test.ts  updater.ts
