[package]
name = "mac-fan-ctrl"
version = "0.1.0"
description = "Minimal Tauri + Svelte hello world slice"
authors = ["mac-fan-ctrl contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
macsmc = "0.1"
thiserror = "1.0"
dirs = "5"
libc = "0.2"

[profile.release]
opt-level = 3
