[package]
name = "mac-fan-ctrl"
version = "0.1.0"
description = "macOS fan control utility — monitor temperatures and manage fan speeds via SMC"
authors = ["mac-fan-ctrl contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
default-run = "mac-fan-ctrl"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
macsmc = "0.1"
thiserror = "1.0"
dirs = "5"
libc = "0.2"
ctrlc = { version = "3.4", features = ["termination"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
core-foundation = "0.10"

[dev-dependencies]
tempfile = "3"

[lib]
name = "mac_fan_ctrl_lib"
path = "src/lib.rs"

[[bin]]
name = "mac-fan-ctrl-helper"
path = "src/bin/mac-fan-ctrl-helper.rs"

[profile.release]
opt-level = 3
