[package]
name = "fanguard"
version = "0.1.0-beta.2"
description = "FanGuard — macOS fan control utility: monitor temperatures and manage fan speeds via SMC"
authors = ["naufaldi"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
default-run = "fanguard"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
macsmc = "0.1"
thiserror = "1.0"
dirs = "5"
libc = "0.2"
ctrlc = { version = "3.4", features = ["termination"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
core-foundation = "0.10"

[dev-dependencies]
tempfile = "3"

[lib]
name = "fanguard_lib"
path = "src/lib.rs"

[[bin]]
name = "fanguard-helper"
path = "src/bin/fanguard-helper.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
